Run the corpus in CI, and say how to run it by hand
A job of its own rather than a step in the engine job, because the run
is fourteen hundred databases and that job runs its suite three times
over.

The job builds the engine and reads the cases out of the same checkout.
That pairing is the whole point: a corpus ahead of the library reports
the engine catching up to its own cases as this client failing, and a
library ahead of the corpus reports nothing at all. zu-go pins a
revision because it ships an archive of the library; this client builds
from source, so there is no revision to pin.

The README gets the command a person runs against a corpus directory,
the flags it takes, and the note that the same run happens under mvn
test when ZU_CASES points at the cases and skips when it does not.